CodeJuzi, optimize project invoke interface process and update doc(README.md)